--- a/ReactJS/Mentoria 04 Projeto Eduzz Componentizando a aplicação/api/package.json
+++ b/ReactJS/Mentoria 04 Projeto Eduzz Componentizando a aplicação/api/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts":{
+    "start": "tsnd --respawn ./src/index.ts"
+  },
   "dependencies": {
     "express": "^4.17.3",
     "typescript": "^4.6.2"
